[gd_scene load_steps=20 format=2]

[ext_resource path="res://files/scripts/residentslinescript.gd" type="Script" id=1]
[ext_resource path="res://files/buttons/arrows/up-press.png" type="Texture" id=2]
[ext_resource path="res://files/buttons/arrows/up.png" type="Texture" id=3]
[ext_resource path="res://files/buttons/arrows/down.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/arrows/down-press.png" type="Texture" id=5]
[ext_resource path="res://files/buttons/stats.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/statsdown.png" type="Texture" id=7]
[ext_resource path="res://files/buttons/inspect.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/inspectdown.png" type="Texture" id=9]
[ext_resource path="res://files/buttons/dig-dug.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/dig-dug (1).png" type="Texture" id=11]
[ext_resource path="res://files/buttons/sex.png" type="Texture" id=12]
[ext_resource path="res://files/buttons/sexdown.png" type="Texture" id=13]
[ext_resource path="res://mainfont.tres" type="DynamicFont" id=14]
[ext_resource path="res://files/buttons/icons/stress/2.png" type="Texture" id=15]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[node name="line" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_constants/separation = 5
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="topbutton" type="TextureButton" parent="." index="0" groups=[
"sortbutton",
]]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 100.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "To Top"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Hint" ]

[node name="upbutton" type="TextureButton" parent="." index="1" groups=[
"sortbutton",
]]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 100.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Up"
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
_sections_unfolded = [ "Hint" ]

[node name="downbutton" type="TextureButton" parent="." index="2" groups=[
"sortbutton",
]]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 100.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Down"
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Hint" ]

[node name="bottombutton" type="TextureButton" parent="." index="3" groups=[
"sortbutton",
]]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 100.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "To Bottom"
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Hint" ]

[node name="actionbuttons" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="portait" type="TextureRect" parent="actionbuttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Portrait"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
expand = true
stretch_mode = 6
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="stats" type="TextureButton" parent="actionbuttons" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 53.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Stats"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
_sections_unfolded = [ "Hint", "Rect" ]

[node name="inspect" type="TextureButton" parent="actionbuttons" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 53.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Inspect"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
_sections_unfolded = [ "Hint", "Rect" ]

[node name="regulations" type="TextureButton" parent="actionbuttons" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 53.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Regulations"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
_sections_unfolded = [ "Hint", "Rect" ]

[node name="sexual" type="TextureButton" parent="actionbuttons" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 53.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Sexual Actions"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
_sections_unfolded = [ "Focus", "Hint", "Rect" ]

[node name="slavename" type="HBoxContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_right = 265.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 45
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="name" type="Button" parent="slavename" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 235.0
margin_bottom = 22.0
rect_min_size = Vector2( 235, 22 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.882813, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_styles" ]

[node name="statusbuttons" type="HBoxContainer" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_right = 299.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 2
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="health" type="TextureButton" parent="statusbuttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Health"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Focus", "Hint" ]

[node name="healthvalue" type="Label" parent="statusbuttons/health" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 4.0
margin_right = 21.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "50"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="obedience" type="TextureButton" parent="statusbuttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Obedience"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Hint" ]

[node name="stress" type="TextureButton" parent="statusbuttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 29.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Stress"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
_sections_unfolded = [ "Hint" ]

[connection signal="pressed" from="topbutton" to="." method="_on_topbutton_pressed"]

[connection signal="pressed" from="upbutton" to="." method="_on_upbutton_pressed"]

[connection signal="pressed" from="downbutton" to="." method="_on_downbutton_pressed"]

[connection signal="pressed" from="bottombutton" to="." method="_on_bottombutton_pressed"]

[connection signal="pressed" from="actionbuttons/stats" to="." method="_on_stats_pressed"]

[connection signal="pressed" from="actionbuttons/inspect" to="." method="_on_inspect_pressed"]

[connection signal="pressed" from="actionbuttons/regulations" to="." method="_on_regulations_pressed"]

[connection signal="pressed" from="actionbuttons/sexual" to="." method="_on_cast_spell_pressed"]


